We must not ask a String to do a File's job
Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>